--- a/themes/cactus-white/layout/post.ejs
+++ b/themes/cactus-white/layout/post.ejs
@@ -13,5 +13,8 @@
   <div class="content" itemprop="articleBody">
     <%- page.content %>
   </div>
+  <div>
+    <a href="https://github.com/jiangchunliang/jiangchunliang.github.io/edit/myblog/source/<%- page.source %>" target="_blank">edit</a>
+  </div>
 </article>
 <%- partial('_partial/comments') %>
